fixed vertical align for text blurbs

--- a/style.css
+++ b/style.css
@@ -47,7 +47,6 @@ section.alternate-background {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  align-items: right;
 }
 
 .group img {
@@ -76,6 +75,7 @@ section.alternate-background {
 
 .item-vertical-align {
   align-items: flex-start;
+  align-self: flex-start;
 }
 
 /* -------  Navigation ------- */
@@ -198,7 +198,6 @@ footer p {
       display: flex;
       flex-direction: column;
       flex-wrap: wrap;
-      align-items: right;
     }
     
 
@@ -232,6 +231,7 @@ footer p {
 
     .item-vertical-align {
       align-items: center;
+      align-self: center;
     }
     
 
